reset neovim configuration

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,57 +1,3 @@
-[submodule "pack/utils/start/vim-fugitive"]
-	path = pack/everything/start/vim-fugitive
-	url = git@github.com:tpope/vim-fugitive.git
-[submodule "pack/languages/start/nvim-lspconfig"]
-	path = pack/everything/start/nvim-lspconfig
-	url = git@github.com:neovim/nvim-lspconfig.git
-[submodule "pack/languages/opt/emmet-vim"]
-	path = pack/everything/opt/emmet-vim
-	url = git@github.com:mattn/emmet-vim.git
-[submodule "pack/utils/start/editorconfig-vim"]
-	path = pack/everything/start/editorconfig-vim
-	url = git@github.com:editorconfig/editorconfig-vim.git
-[submodule "pack/languages/start/vim-nix"]
-	path = pack/everything/start/vim-nix
-	url = git@github.com:LnL7/vim-nix.git
-[submodule "pack/languages/start/nvim-treesitter"]
-	path = pack/everything/start/nvim-treesitter
-	url = git@github.com:nvim-treesitter/nvim-treesitter.git
-[submodule "pack/languages/start/vim-svelte"]
-	path = pack/everything/start/vim-svelte
-	url = git@github.com:evanleck/vim-svelte.git
-[submodule "pack/languages/start/nvim-cmp"]
-	path = pack/everything/start/nvim-cmp
-	url = git@github.com:hrsh7th/nvim-cmp.git
-[submodule "pack/languages/start/cmp-nvim-lsp"]
-	path = pack/everything/start/cmp-nvim-lsp
-	url = git@github.com:hrsh7th/cmp-nvim-lsp.git
-[submodule "pack/languages/start/cmp-buffer"]
-	path = pack/everything/start/cmp-buffer
-	url = git@github.com:hrsh7th/cmp-buffer.git
-[submodule "pack/languages/start/vim-vsnip"]
-	path = pack/everything/start/vim-vsnip
-	url = git@github.com:hrsh7th/vim-vsnip.git
-[submodule "pack/utils/start/telescope.nvim"]
-	path = pack/everything/start/telescope.nvim
-	url = git@github.com:nvim-telescope/telescope.nvim.git
-[submodule "pack/utils/start/plenary.nvim"]
-	path = pack/everything/start/plenary.nvim
-	url = git@github.com:nvim-lua/plenary.nvim
-[submodule "pack/utils/start/nvim-tree.lua"]
-	path = pack/everything/start/nvim-tree.lua
-	url = git@github.com:kyazdani42/nvim-tree.lua.git
-[submodule "pack/everything/start/solarized.nvim"]
-	path = pack/everything/start/solarized.nvim
-	url = git@github.com:shaunsingh/solarized.nvim.git
-[submodule "pack/everything/start/lualine.nvim"]
-	path = pack/everything/start/lualine.nvim
-	url = git@github.com:nvim-lualine/lualine.nvim.git
-[submodule "pack/everything/start/github-nvim-theme"]
-	path = pack/everything/start/github-nvim-theme
-	url = git@github.com:projekt0n/github-nvim-theme.git
-[submodule "pack/everything/start/vscode.nvim"]
-	path = pack/everything/start/vscode.nvim
-	url = git@github.com:Mofiqul/vscode.nvim.git
-[submodule "pack/everything/start/telescope-fzf-native.nvim"]
-	path = pack/everything/start/telescope-fzf-native.nvim
-	url = git@github.com:nvim-telescope/telescope-fzf-native.nvim.git
+[submodule "pack/default/start/lazy.nvim"]
+	path = pack/default/start/lazy.nvim
+	url = git@github.com:folke/lazy.nvim.git
